更新中文说明